--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 <br>
 <div class="mt-5">
-    <h2 class="text-white text-center">Ultimos Lanzamientos 2</h2>
+    <h2 class="text-white text-center">Ultimos Lanzamientos</h2>
 </div>
     <div class="row row-cols-1 row-cols-md-4 g-4  me-3 ms-3 mt-3 mb-3" id="albunes"></div>
     
