--- a/album.html
+++ b/album.html
@@ -8,27 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
 <body class="bg-dark">
-    <div class="fixed-top">
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href=""><img src="img/logo.png" width="30" height="30" alt=""></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Buscar</a>
-                  </li>
-                 </ul>
-              </div>
-            </div>
-        </nav>
-        <div  style=" width: 100%; height: 2px; background-color:#1ED760"></div>
-    </div>
+  <div class="fixed-top" data-pag="inicio" id="barraNav"></div>
     <br>
     <div class="mt-5" id="nombreAlbum"></div>
     <div class="text-white  me-3 ms-3 mt-3 mb-3">
@@ -37,7 +17,6 @@
                     <thead>
                         <tr>
                             <th></th>
-                            
                             <th></th>
                             <th></th>
                             <th></th>
@@ -51,6 +30,8 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/scriptAlbum.js"></script>
+        <script src="js/barraNavegacion.js"></script>
+        <script src="js/validarToken.js"></script>
+        <script src="js/scriptAlbum.js"></script>
 </body>
 </html>
