--- a/index.html
+++ b/index.html
@@ -9,27 +9,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body class="bg-dark">
-    <div class="fixed-top">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href=""><img src="img/logo.png" width="30" height="30" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Buscar</a>
-              </li>
-             </ul>
-          </div>
-        </div>
-    </nav>
-    <div  style=" width: 100%; height: 2px; background-color:#1ED760"></div>
-</div>
+  <div class="fixed-top" data-pag="inicio" id="barraNav"></div>
 <br>
 <div class="mt-5">
     <h2 class="text-white text-center">Ultimos Lanzamientos</h2>
@@ -37,7 +17,8 @@
     <div class="row row-cols-1 row-cols-md-4 g-4  me-3 ms-3 mt-3 mb-3" id="albunes"></div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="js/barraNavegacion.js"></script>
+    <script src="js/validarToken.js"></script>
 <script src="js/scriptIndex.js"></script>
 </body>
 </html>
