--- a/buscar.html
+++ b/buscar.html
@@ -25,6 +25,7 @@
 <div class="row row-cols-1 row-cols-md-4 g-4  me-3 ms-3 mt-3 mb-3" id="resultadosEncontrados"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/tarjetaPlantilla.js"></script>
     <script src="js/barraNavegacion.js"></script>
     <script src="js/validarToken.js"></script>
     <script src="js/busqueda.js"></script>
